# ug_bluerobot

./: README.md
clopema_drivers/clopema_controller/: CMakeLists.txt  ReadMe.txt  package.xml
clopema_drivers/clopema_controller/launch/: start_controller.launch  virtual_controller.launch
clopema_drivers/clopema_controller/src/: ClopemaJointRelayHandler.cpp  ClopemaJointTrajectoryStreamer.cpp  ClopemaRobotStateInterface.cpp  MotomanMotionCtrl.cpp  clopema_joint_streamer.cpp  clopema_robot_state.cpp
clopema_drivers/clopema_controller/tests/: CMakeLists.txt  controller_actionlib.cpp  controller_actionlib.test  robot_state_ready.cpp  robot_state_ready.test
clopema_drivers/clopema_drivers_msgs/: CMakeLists.txt  package.xml
clopema_drivers/clopema_drivers_msgs/action/: GetCameraImage.action  GetStereoPair.action
clopema_drivers/clopema_drivers_msgs/srv/: SetSynchronization.srv
clopema_drivers/clopema_force/: CMakeLists.txt  package.xml
clopema_drivers/clopema_force/launch/: force_sensors.launch
clopema_drivers/clopema_force/src/: filter_force.cpp  filter_gripper.cpp
clopema_drivers/clopema_gripper/: .gitignore  CMakeLists.txt  README  package.xml
clopema_drivers/clopema_gripper/data/: clbr  clbr-2
clopema_drivers/clopema_gripper/include/: clopema_gripper_driver.h  clopema_gripper_micro.h  clopema_gripper_motor.h  clopema_gripper_rosskin.h  clopema_gripper_skin.h
clopema_drivers/clopema_gripper/launch/: start_gripper.launch  start_gripper_CERTH.launch  start_gripper_UG.launch  virtual_gripper.launch  virtual_gripper_shadow.launch
clopema_drivers/clopema_gripper/msg/: Direction.msg  MotorPosition.msg  MotorStatus.msg  SkinData.msg
clopema_drivers/clopema_gripper/scripts/: calibrate_pos.py  clopema_gripper_driver.sh  optical_classification.py  optical_classification.py~
clopema_drivers/clopema_gripper/src/: .gitignore  driver.c  micro.cpp  micro_ros_server.cpp  motor.cpp  motor_ros_server.cpp  shconio.c  shconio.h  skin.c  skin_iterators.cpp  skin_ros_client.cpp  skin_ros_server.cpp  view.cpp
clopema_drivers/clopema_gripper/srv/: ForcePercentage.srv  GetDirection.srv  GetFrequency.srv  GetMod.srv  GetPosition.srv  MoveAbsolutePercentage.srv  MoveAbsoluteUpdate.srv  MoveRelative.srv  MoveRelativePercentage.srv  OpticalClassification.srv  SetDirection.srv  SetGripperState.srv  SetMod.srv  SkinInit.srv  SkinRead.srv
clopema_drivers/clopema_gripper/test/: motor_calib_test.cpp  motor_test.cpp  skin_periodic.cpp  skin_sporadic.cpp
clopema_drivers/clopema_gripper/view/: .gitignore
clopema_drivers/clopema_ptu/: CMakeLists.txt  package.xml
clopema_drivers/clopema_ptu/launch/: virtual_ptu.launch
clopema_drivers/clopema_stereo/: CMakeLists.txt  package.xml
clopema_drivers/clopema_stereo/launch/: clopema_stereo.launch
clopema_drivers/clopema_stereo/src/: GPhotoRos.cpp  get_camera_image_server.cpp  get_stereo_pair_client.cpp  get_stereo_pair_server.cpp
clopema_drivers/virtual_robot/: CMakeLists.txt  package.xml
clopema_drivers/virtual_robot/src/: VirtualGripper.cpp  VirtualRobot.cpp  virtual_gripper.cpp  virtual_robot.cpp
clopema_drivers/virtual_robot/tests/: CMakeLists.txt  virtual_gripper.cpp  virtual_gripper.test  virtual_robot.cpp  virtual_robot.test
clopema_ompl/: CMakeLists.txt
clopema_ompl/ompl/: CMakeLists.txt  README.md
clopema_ompl/ompl/.hg/: branch  dirstate  hgrc  undo.desc
clopema_ompl/ompl/CMakeModules/: ompl.pc
clopema_ompl/ompl_interface/: CMakeLists.txt
clopema_ompl/ompl_interface/src/: model_based_planning_context.cpp  ompl_interface.cpp  ompl_planner.cpp  planning_context_manager.cpp
clopema_ompl/scripts/: install_ompl_clopema.sh
clopema_testbed/clopema_calibration/: CMakeLists.txt  package.xml  setup.py
clopema_testbed/clopema_calibration/bin3rd/: dotmatrix  rba
clopema_testbed/clopema_calibration/cfg/: Dotmatrix.cfg
clopema_testbed/clopema_calibration/config/: algorithm_1.dma  gauge30x30.gdf
clopema_testbed/clopema_calibration/dotmatrix/: dotmatrix.h
clopema_testbed/clopema_calibration/launch/: dotmatrix_srv.launch
clopema_testbed/clopema_calibration/matlab/: calib_camera.m  calib_depth.m  calib_dir.m  calib_dotmatrix.m  calib_handeye.m  calib_stereo.m  dotmatrix.m  experiment_01.m  export_camera.m  export_link.m  gauge.m  invT.m  issuffix.m  mrba.m  quiver3a.m  readjoints.m  readtf.m  robot_init_motoros.m  robot_pose.m  robot_stop.m  rosfind.m  rosparam.m
clopema_testbed/clopema_calibration/msg/: Dotmatrix.msg  DotmatrixDot.msg
clopema_testbed/clopema_calibration/scripts/: camera_calib_capture.py  camera_calib_capture_v2.py  gen_calib_trajectory.py  run_calib_camera.sh  table_calib.py  table_calib_check.py  table_calib_check.py~  test_dotmatrix_srv.py  xtion_calib_capture.py
clopema_testbed/clopema_calibration/src_cpp/: dotmatrix_node.cpp  dotmatrix_ros.cpp  dotmatrix_srv.cpp
clopema_testbed/clopema_calibration/srv/: DetectDotmatrix.srv
clopema_testbed/clopema_description/: CMakeLists.txt  package.xml
clopema_testbed/clopema_description/calibration_CERTH/: xtion3_rgb_camera.yaml
clopema_testbed/clopema_description/calibration_CVUT/: mechanical.calib  r1_dh.calib  r1_force_sensor.calib  r2_dh.calib  r2_force_sensor.calib  segmentation.yaml  xtion1_rgb_camera.yaml  xtion1_rgb_handeye.calib  xtion2_rgb_camera.yaml  xtion2_rgb_handeye.calib  xtion3_handeye.calib
clopema_testbed/clopema_description/calibration_LOCAL/: left_base_ptu.calib  right_base_ptu.calib
clopema_testbed/clopema_kinematics/: CMakeLists.txt  clopema_kinematics_plugin_description.xml  package.xml
clopema_testbed/clopema_libs/: CMakeLists.txt  package.xml  setup.py
clopema_testbed/clopema_moveit/: CMakeLists.txt  CMakeLists.txt~  clopema_moveit_capabilities.xml  package.xml
clopema_testbed/clopema_robot/: CMakeLists.txt  package.xml  setup.py
clopema_testbed/clopema_segmentation/: CMakeLists.txt  package.xml
clopema_testbed/clopema_skills/: CMakeLists.txt  package.xml
clopema_testbed/clopema_smach/: CMakeLists.txt  package.xml  setup.py
clopema_testbed/segmentation/: CMakeLists.txt  package.xml
(+3807 files in other folders)
