<?xml version="1.0"?>
<package>
  <name>clopema_gripper</name>
  <version>0.9.1</version>
  <description>The clopema gripper package</description>

  <maintainer email="shabbyx@gmail.com">Shahbaz Youssefi</maintainer>


  <license>GPLv2+</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>


  <export>
  </export>
</package>
