<?xml version='1.0' encoding='ASCII'?>
<package>
    <name>clopema_kinematics</name>
    <version>0.0.0</version>
    <description>
        The clopema_kinematics package contains IKT implementation for each planning group
    </description>
    <maintainer email="vladko.petrik@gmail.com">Vladimir Petrik</maintainer>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>moveit_core</build_depend>
    <build_depend>pluginlib</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>tf_conversions</build_depend>
    <build_depend>orocos_kdl</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <run_depend>moveit_core</run_depend>
    <run_depend>pluginlib</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>tf_conversions</run_depend>
    <run_depend>orocos_kdl</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    
    <build_depend>cmake_modules</build_depend>
    <run_depend>cmake_modules</run_depend>
    
    <export>
        <moveit_core plugin="${prefix}/clopema_kinematics_plugin_description.xml"/>
    </export>
</package>
