<?xml version="1.0"?>
<package>
  <name>clopema_moveit</name>
  <version>0.0.0</version>
  <description>The clopema_moveit package, additional moveit capabilities related to the clopema robot.</description>

  <maintainer email="vladko.petrik@gmail.com">Vladimír Petrík</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>moveit_ros_move_group</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>moveit_ros_move_group</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
    <moveit_ros_move_group plugin="${prefix}/clopema_moveit_capabilities.xml"/>
  </export>
</package>
