<?xml version="1.0"?>
<package>
  <name>clopema_smach</name>
  <version>0.0.0</version>
  <description>The clopema_smach package</description>
  <maintainer email="wagnelib@cmp.fel.cvut.cz">Libor Wagner</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_move_group</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>smach</build_depend>
  <build_depend>smach_ros</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_move_group</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>smach</run_depend>
  <run_depend>smach_ros</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>

  <export>
  </export>
</package>
